# detragraphs

./: .gitmodules  CMakeLists.txt  README.md
R_benchmarks/: test.R
detragraphs/: generators.hpp  graph.hpp  ioadapter.hpp  metrics.hpp  printer.hpp
detragraphs/graphbackend/: adjacencylist.hpp  adjacencymatrix.hpp  graphbackend.hpp
scripts/: applypatch.sh  build.sh  build_tracy.sh  dropbox_upload.sh  generate_docs.sh  make-windows.sh  make.sh
scripts/prepare/: ubuntu.sh
src/: generators.hpp  graph.hpp  graphbackend.hpp  ioadapter.hpp  main.cpp
